--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('market_page') }}">Features</a>
+            <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('home_page') }}">Pricing</a>
+            <a class="nav-link" href="{{ url_for('home_page') }}">Cart?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="{{ url_for('home_page') }}"
